--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 gestion-tutorat-back/uploads/*
+# Node
+/node_modules/
+/dist/
+/coverage/
+npm-debug.log
+yarn-error.log
+
+# Environment
+.env
+.env.*
+
+# Angular
+/.angular/cache
+.angular/
+
+# VSCode
+.vscode/
