--- a/gestion-tutorat-back/package.json
+++ b/gestion-tutorat-back/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.13",
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -32,6 +33,7 @@
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20",
     "xlsx": "^0.18.5"
   },
@@ -44,6 +46,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^20.17.14",
     "@types/supertest": "^6.0.0",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/xlsx": "^0.0.35",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
