--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "bootstrap": "^5.3.6",
     "file-saver": "^2.0.5",
+    "ngx-bootstrap": "^19.0.2",
     "ngx-toastr": "^19.0.0",
     "xlsx": "^0.18.5"
   },
