--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.6",
+    "chart.js": "^3.9.1",
     "file-saver": "^2.0.5",
+    "ng2-charts": "^4.0.0",
     "ngx-bootstrap": "^19.0.2",
     "ngx-toastr": "^19.0.0",
     "xlsx": "^0.18.5"
