--- a/gestion-tutorat-back/package.json
+++ b/gestion-tutorat-back/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^7.1.13",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
+    "cas-authentication": "^0.0.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "csv-parser": "^3.1.0",
